[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
bytes = "1"
tokio-stream = "0.1"

# Async runtime
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "process"] }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
prometheus-client = "0.22"
ipnet = "2.11.0"

# HTTP client (for token->USD pricing)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# ECIES (secp256k1‑based)
ecies = "0.2.10"

# Solana client
solana-client = "2.0.0"
solana-sdk    = "2.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "7.0.0"

# Temporary files for the snarkjs step
tempfile = "3.9"

# Error handling helpers
thiserror = "1.0"
anyhow = "1.0"

base64 = "0.21"
sha3   = "0.10"
solana-transaction-status = "2.0"
bincode = "1.3"

# Note encryption (X25519 sealed-box + AES-256-GCM)
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"

# Decimal conversion for binding Groth16 public signal <-> 32-byte nullifier encoding
num-bigint = "0.4"
groth16-solana = "0.2.0"

# Read the on-chain SPL Concurrent Merkle Tree changelog (root/path buffer)
spl-concurrent-merkle-tree = "1.0.0"
bytemuck = "1.16"
[workspace]