[package]
name = "solana-privacy-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_privacy_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
#
# Cargo dependency unification fix:
# `anchor-spl` pulls `spl-token-2022`, which (via `solana-zk-sdk`) currently requires
# `solana-instruction = 2.2.1`. Anchor itself allows any `2.x`, but Cargo was picking
# `2.3.3` first, causing a hard conflict. Pinning resolves it for the whole workspace.
# `solana-program` is pinned to the same version for the `keccak` module + `pubkey!` macro
# (not re-exported by `anchor-lang`).
solana-instruction = "=2.2.1"
solana-program = "=2.2.1"
# Anchor/Solana toolchains can ship an older Cargo that can't parse crates requiring
# the unstable `edition2024` cargo feature (e.g. base64ct >= 1.8.x).
base64ct = "=1.7.3"
bytemuck = "1.24.0"
bincode = "1.3.3"
groth16-solana = "0.2.0"
pyth-solana-receiver-sdk = "1.1.0"
spl-concurrent-merkle-tree = "1.0.0"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
